--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+.main-container{
+    width: 100%;
+
+}
 header {
     width: 100%;
     padding: 30px 100px;
