--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 header {
     width: 100%;
     padding: 30px 100px;
-    display: flex;
+    display: none;
     justify-content: space-between;
     align-items: center;
 }
