--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
     width: 100%;
     padding: 30px 100px;
     display: none;
-    justify-content: space-between;
+    justify-content: ;
     align-items: center;
 }
 .logo {
